# NekoCLI

./: .gitignore  README.md  config.py  install.sh  neko  pyproject.toml
modules/: __init__.py  ai.py  chats.py  config.py  main.py  media.py
utils/: __init__.py  spinner.py
